<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Peek</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="service_name">NotificationPeek</string>
    <string name="device_admin_description">Perform lock screen</string>
    <string name="notification_access">Enable Notification Access</string>
    <string name="device_access">Enable Device Access</string>
    <string name="diagnosis_notification_title">Diagnosis notification</string>
    <string name="diagnosis_notification_title_content">How to use gestures</string>
    <string name="diagnosis_notification_content">- Hold icon to show content. \n- Hold and release to open app. \n- Swipe left or right to dismiss.</string>
    <string name="sensor_states">Sensor states</string>
    <string name="send_notification">Send test notification</string>
    <string name="test_notification">Test notification</string>
    <string name="show_clock">Show clock.</string>
    <string name="hide_clock">Hide clock</string>
    <string name="show_clock_title">Show Clock</string>
    <string name="peek_timeout_title">Notification Peek Timeout</string>
    <string name="sensor_timeout">Sensor Timeout</string>
    <string name="always_listening_sum">(Experimental) Set the sensor listeners to listen to device activities (as long as there is a notification) and wake up the screen if necessary. </string>
    <string name="instruction_start">Accesses are disabled</string>
    <string name="instruction_ok">Accesses are enabled</string>
    <string name="general_preferences">Notification preferences</string>
    <string name="sensor_preferences">Sensor Preferences</string>
    <string name="use_gyro">Use Gyroscope Sensor</string>
    <string name="enable_gyro_sum">Listen to gyroscope sensor changes.</string>
    <string name="disable_gyro_sum">Stop listening to gyroscope sensor changes and display notification if necessary.</string>
    <string name="use_prox_light">Use Proximity/Light Sensor</string>
    <string name="enable_prox_light_sum">Listen to proximity/light sensor changes.</string>
    <string name="disable_prox_light_sum">Stop listening to proximity/light sensor changes and display notification if necessary.</string>
    <string name="always_show_content">Always Display Content</string>
    <string name="always_show_content_sum">Always display notification content, regardless which screen lock method is used.</string>
    <string name="prox_light_sensor">Proximity/Light Sensor</string>
    <string name="gyro_sensor">Gyroscope Sensor</string>
    <string name="notification_peek_access">Notification Peek Access</string>
    <string name="action_about">About</string>
    <string name="close">Close</string>
    <string name="sensor_missing">Sensor is not found.</string>
    <string name="device_admin_missing">Peek is not activated in Device Administrator. Please enable it first.</string>
    <string name="search_hint">Enter app name</string>
    <string name="black_list">Black List</string>
    <string name="add_to_black_list">Search app name and add to black list:</string>
    <string name="current_black_list">Current Black List:</string>
    <string name="peek_background">Peek View Background</string>
    <string name="appearance">Appearance</string>
    <string name="appearance_settings">Appearance Settings</string>
    <string name="appearance_settings_sum">Change Peek view appearances</string>
    <string name="radius">Blur Radius</string>
    <string name="dim">Dim</string>
    <string name="everything">All apps are in black list</string>
    <string name="quiet_hour">Set Quiet Hour</string>
    <string name="disable_peek">Disable Peek</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="peek_disabled">Peek is already disabled</string>
    <string name="show_system_apps">Show system apps</string>

</resources>
