<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:descendantFocusability="beforeDescendants"
              android:focusableInTouchMode="true">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            style="@style/HeaderTextStyle.Medium"
            android:text="@string/add_to_black_list"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_edit_text"
            android:hint="@string/search_hint"
            style="@style/TitleTextStyle"
            android:layout_marginTop="@dimen/generic_spacing_medium"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/generic_spacing_medium"/>

    <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_system_apps"
            android:id="@+id/show_system_app_check"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            style="@style/HeaderTextStyle.Medium"/>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment_container"
            >


    </FrameLayout>

</LinearLayout>